gccida/g1/local_alloc
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:807:4: error: expected ';' after expression
rtx reg_note; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:807:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r15 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:817:4: error: expected ';' after expression
rtx init_insns; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:817:5: error: use of undeclared identifier 'init_insns'; did you mean 'emit_insns'?
rtx init_insns; // rax 
    ^~~~~~~~~~
    emit_insns
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/rtl.h:1335:12: note: 'emit_insns' declared here
extern rtx emit_insns                   PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:821:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:821:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:841:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:841:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:843:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:843:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:875:4: error: expected ';' after expression
rtx v74; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:875:5: error: use of undeclared identifier 'v74'
rtx v74; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:881:4: error: expected ';' after expression
rtx hard_reg_initial_reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:881:5: error: use of undeclared identifier 'hard_reg_initial_reg'; did you mean 'get_hard_reg_initial_reg'?
rtx hard_reg_initial_reg; // rax 
    ^~~~~~~~~~~~~~~~~~~~
    get_hard_reg_initial_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/integrate.h:145:12: note: 'get_hard_reg_initial_reg' declared here
extern rtx get_hard_reg_initial_reg             PARAMS ((struct function *, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:887:4: error: expected ';' after expression
rtx v86; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:887:5: error: use of undeclared identifier 'v86'
rtx v86; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:891:4: error: expected ';' after expression
rtx v90; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:891:5: error: use of undeclared identifier 'v90'
rtx v90; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/local-alloc.c:892:4: error: expected ';' after expression
rtx v91; // r15 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/local_alloc/src/obj/local-alloc.o] Error 1
